Added java vm args to launcher